--- a/Front-end-Chatter/src/assets/css/login.css
+++ b/Front-end-Chatter/src/assets/css/login.css
@@ -40,3 +40,14 @@
 .loginPart button{
     width: 100%;
 }
+
+.btnLogin{
+    margin-top: 10%;
+    background-color: lightgreen;
+    border: 2.5px solid black;
+    border-radius: 20px;
+}
+
+.btnLogin:hover{
+    background-color: rgb(2, 145, 2);
+}
