--- a/Front-end-Chatter/src/assets/css/start.css
+++ b/Front-end-Chatter/src/assets/css/start.css
@@ -4,15 +4,58 @@
     align-items: center;
     height: 100vh;
     background-image: url('../images/HomePage.jpg');
-    flex-direction: column;
+    flex-direction: row;
 }
 .startBase{
     background-color: white;
-    padding: 5%;
-    padding-top: 2.5%;
-    padding-bottom: 2.5%;
-
-    border-radius: 25px;
-    opacity: 97%;
     border: 2.5px solid black;
+    width: 80%;
+    height: 90%;
+    display: flex;
+    flex-direction: row;
+    border-radius: 0px 25px 25px 0px;
+    opacity: 97%;
+}
+
+.startNavigation{
+    background-color: lightgray;
+    width: 7.5%;
+    border-radius:25px 0px 0px 25px;
+    border: 2.5px solid black;
+    border-right: 0px solid black;
+    height: 90%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    padding-top: 2.5%;
+    padding-bottom: 1%;
+}
+
+.startNavigationIcons{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.startNavigationIcons a{
+    display: flex;
+    justify-content: center;
+}
+
+.startLogOut{
+    width: 90%;
+}
+
+.startBtnLogOut{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    border-radius: 20px;
+    background-color: lightgreen;
+}
+
+.startBtnLogOut:hover{
+    background-color: rgb(2, 145, 2);
 }
