update friends tabel

--- a/Front-end-Chatter/src/assets/css/start.css
+++ b/Front-end-Chatter/src/assets/css/start.css
@@ -43,6 +43,10 @@
     display: flex;
     justify-content: center;
 }
+.startNavigationIconsName{
+    display: flex;
+    justify-content: center;
+}
 
 .startLogOut{
     width: 90%;
