--- a/Front-end-Chatter/src/assets/css/start.css
+++ b/Front-end-Chatter/src/assets/css/start.css
@@ -1,4 +1,4 @@
-.startStructure {
+.structure {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -6,7 +6,7 @@
     background-image: url('../images/HomePage.jpg');
     flex-direction: row;
 }
-.startBase{
+.base{
     background-color: white;
     border: 2.5px solid black;
     width: 80%;
@@ -17,54 +17,7 @@
     opacity: 97%;
 }
 
-.startNavigation{
-    background-color: lightgray;
-    width: 7.5%;
-    border-radius:25px 0px 0px 25px;
-    border: 2.5px solid black;
-    border-right: 0px solid black;
-    height: 90%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    flex-direction: column;
-    padding-top: 2.5%;
-    padding-bottom: 1%;
-}
-
-.startNavigationIcons{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.startNavigationIcons a{
-    display: flex;
-    justify-content: center;
-}
-.startNavigationIconsName{
-    display: flex;
-    justify-content: center;
-}
-
-.startLogOut{
-    width: 90%;
-}
-
-.startBtnLogOut{
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    border-radius: 20px;
-    background-color: lightcoral;
-}
-
-.startBtnLogOut:hover{
-    background-color: rgb(201, 39, 39);
-}
-
-.startProfile{
+.baseHeader{
     background-color: lightyellow;
     height: 100%;
     margin: 2.5%;
