--- a/Front-end-Chatter/src/assets/css/chats.css
+++ b/Front-end-Chatter/src/assets/css/chats.css
@@ -78,3 +78,10 @@
 }
 
 
+.scrollbar {
+    max-height: 450px;
+    overflow-y: scroll;
+    scrollbar-width: auto;
+    scrollbar-color: #000000 #ffffff;
+
+}
