--- a/Front-end-Chatter/src/assets/css/chats.css
+++ b/Front-end-Chatter/src/assets/css/chats.css
@@ -83,5 +83,6 @@
     overflow-y: scroll;
     scrollbar-width: auto;
     scrollbar-color: #000000 #ffffff;
-
+    display: flex;
+    flex-direction: column;
 }
