--- a/Front-end-Chatter/src/assets/css/profile.css
+++ b/Front-end-Chatter/src/assets/css/profile.css
@@ -1,5 +1,54 @@
-.baseHeader{
-    background-color: lightyellow;
-    height: 100%;
+.baseProfileHeader{
+    height: 5%;
     margin: 2.5%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+.baseProfileBody {
+    height: 80%;
+    margin: 2.5%;
+    display: flex;
+}
+
+.changeProfileSettings{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    gap: 5%;
+
+}
+
+.profileItemSettings{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 40%;
+    height: 50%;
+    gap: 20px;
+    padding: 2.5%;
+    border: 1px black solid;
+}
+.layoutProfileSettings{
+    display: flex;
+    flex-direction: column;
+}
+
+.removeUser{
+    width: 25%;
+    height: 10%;
+}
+
+.removeUserButton{
+    width: 100%;
+    height: 100%;
+    background-color: lightcoral;
+}
+
+.removeUserButton:hover{
+    background-color: rgb(201, 39, 39);
+}
+
