--- a/Front-end-Chatter/src/assets/css/profile.css
+++ b/Front-end-Chatter/src/assets/css/profile.css
@@ -24,13 +24,14 @@
 
 .profileItemSettings{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     flex-direction: column;
     width: 40%;
     gap: 20px;
     padding: 2.5%;
     border: 1px black solid;
-    min-height: 60%;
+    min-height: 350px;
+    max-height: 350px;
 }
 .layoutProfileSettings{
     display: flex;
@@ -70,9 +71,8 @@
 
 .imageLayout{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     flex-direction: column;
-    gap: 20px;
 }
 .profileImageContainer{
     display: flex;
@@ -84,8 +84,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    max-height: 90%;
-    max-width: 90%;
+    width: 200px;
     flex-wrap: wrap;
     flex-direction: column;
+}
+
+.btnChangeProfilePicture{
+    background-color: #67a1f8;
+}
+.btnChangeProfilePicture:hover{
+    background-color: #0d6efd;
 }
