--- a/Front-end-Chatter/src/assets/css/profile.css
+++ b/Front-end-Chatter/src/assets/css/profile.css
@@ -24,7 +24,6 @@
 
 .profileItemSettings{
     display: flex;
-    justify-content: space-between;
     flex-direction: column;
     width: 40%;
     gap: 20px;
@@ -94,4 +93,12 @@
 }
 .btnChangeProfilePicture:hover{
     background-color: #0d6efd;
+}
+
+.input-group{
+    flex-wrap: nowrap;
+}
+
+.textFields{
+    width: 100%;
 }
