--- a/Front-end-Chatter/src/assets/css/friends.css
+++ b/Front-end-Chatter/src/assets/css/friends.css
@@ -34,5 +34,10 @@
 
 .friendImage{
     border: 1px solid black;
-
+    width: 100%;
+    height: 100%;
+}
+.image{
+    max-width: 50px;
+    max-height: 50px;
 }
