--- a/Front-end-Chatter/src/assets/css/friends.css
+++ b/Front-end-Chatter/src/assets/css/friends.css
@@ -29,15 +29,16 @@
 
 .friendImageUsername{
     display: flex;
-    gap: 50%;
+    gap: 25px;
+    align-items: center;
 }
 
 .friendImage{
     border: 1px solid black;
-    width: 100%;
-    height: 100%;
 }
 .image{
     max-width: 50px;
     max-height: 50px;
+    min-width: 50px;
+    min-height: 50px;
 }
