--- a/Front-end-Chatter/src/assets/css/chats.css
+++ b/Front-end-Chatter/src/assets/css/chats.css
@@ -66,8 +66,22 @@
     background-color: #0d6efd;;
     width: fit-content;
     padding: 2%;
+    padding-bottom: 1.5%;
     border-radius: 20px;
     color: #fff;
+    display: flex;
+    flex-direction: row;
+}
+
+.message-Friend{
+    background-color: #0d6efd;;
+    width: fit-content;
+    padding: 2%;
+    padding-bottom: 1.5%;
+    border-radius: 20px;
+    color: #fff;
+    display: flex;
+    flex-direction: row;
 }
 
 
@@ -105,4 +119,29 @@
     background-color: #0d6efd;
 }
     
+.dateTime{
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    font-size: 75%;
+    color: black;
+}
 
+.dateTime-Friend{
+   display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    font-size: 75%;
+    color: black;
+}
+
+.textMessage{
+    padding-right:  10px;
+    padding-bottom: 10px;
+}
+
+.textMessage-Friend{
+    padding-right: 10px;
+    padding-bottom: 10px;
+
+}
